<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_aktifitas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_daily" />
        <item
            android:id="@+id/nav_teman"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_teman" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_musik"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_Music" />
            <item
                android:id="@+id/nav_video"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_Video" />
        </menu>
    </item>
    <item android:title="self data and application">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/i_profile12"
                android:title="@string/menu_Profile" />
            <item
                android:id="@+id/nav_tentang"
                android:icon="@drawable/i_about"
                android:title="@string/menu_tentang" />
        </menu>
    </item>

</menu>
