<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentProfil"
    android:orientation="vertical"
    android:background="@drawable/bgbackground">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/bgheader"
            android:layout_width="match_parent"
            android:layout_height="150dp">
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_marginTop="90dp"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/gambar_shiyam2"
            app:civ_border_width="3dp"
            app:civ_border_color="#FFFFFF"/>
        <TextView
            android:layout_below="@+id/profile_image"
            android:id="@+id/text_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="SHIYAM ROBATOROSYADA"
            android:textStyle="bold"
            android:textColor="@color/colorTextt"
            android:textSize="20sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:tooltipText="italic">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/i_email"/>
            <TextView
                android:id="@+id/gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="ShiyamRobator@gmail.com"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPutih"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/i_tgllahir"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/data_tanggal"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPutih"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/i_tempat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/data_tempatlahir"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPutih"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/i_makes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/data_makanan"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPutih"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/i_mikes"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/data_minuman"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPutih"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/i_pkerjaan"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/data_pekerjaan"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPutih"
                android:textStyle="bold"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/i_cita2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/data_citacita"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPutih"
                android:textStyle="bold"/>

        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/i_inst" />
        <TextView
            android:id="@+id/instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="Shiyamrobatorosyada"
            android:textStyle="bold"
            android:textColor="@color/colorPutih"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/i_tlpon"/>
        <TextView
            android:id="@+id/nomorhandphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="089673952197"
            android:textColor="@color/colorPutih"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <Button

        android:id="@+id/btn_toMaps"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="cari saya do maps"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#fff"
        android:background="@color/colorText"
        android:textAllCaps="false"/>

</LinearLayout>

